sumo/tests/sumo/output/e1/errors/lane_missing/errors.sumo
Error: Attribute 'lane' is missing in definition of detector '4/1to3/1'.
Quitting (on error).
